# neosurf

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WINDOWS_RENDERING_SYNC.md  analyze_font_size.py  app.css  grid_placement_test.html  phoronix_svg_test.html  recovered_polyfill.js  test_output.txt  update_resources.py  win-release.sh  xp-release.sh
.agent/plans/: image-dimension-optimization.md
.trae/rules/: project_rules.md
contrib/: CMakeLists.txt
contrib/libcss/: CMakeLists.txt
contrib/libdom/: CMakeLists.txt
contrib/libhubbub/: CMakeLists.txt
contrib/libnsbmp/: CMakeLists.txt
contrib/libnsgif/: CMakeLists.txt
contrib/libnsutils/: CMakeLists.txt
contrib/libnsutils/include/libwapcaplet/: libwapcaplet.h
contrib/libnsutils/include/nsutils/: assert.h  base64.h  endian.h  errors.h  time.h
contrib/libnsutils/src/: base64.c  libwapcaplet.c  time.c  unistd.c
contrib/libnsutils/test/: base64.c
contrib/libparserutils/: CMakeLists.txt
contrib/libsvgtiny/: CMakeLists.txt
contrib/quickjs-ng/: CMakeLists.txt  cutils.h
frontends/: CMakeLists.txt
frontends/beos/: Makefile  WindowStack.h  about.cpp  bitmap.cpp  bitmap.h  cookies.cpp  download.cpp  fetch_rsrc.cpp  filetype.cpp  font.cpp  font.h  gui.cpp  gui.h  gui_options.cpp  gui_options.h  login.cpp  options.h  plotters.cpp  plotters.h  res.h  scaffolding.cpp  scaffolding.h  schedule.cpp  search.cpp  (+4 more)
src/: CMakeLists.txt
test/: gradient_test.html
utils/: cmake_helper.py  qjs_binding_generator.py  update_homepage.py  update_homepage_safe.py
(+1370 files in other folders)
